--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,10 @@ repos:
         exclude: archive|examples
       - id: check-json
       - id: check-docstring-first
+      - id: trailing-whitespace
+        exclude: archive|examples
+      - id: end-of-file-fixer
+        exclude: archive|examples
 -   repo: https://github.com/psf/black
     rev: 23.3.0
     hooks:
@@ -21,3 +25,10 @@ repos:
     rev: 0.23.0
     hooks:
       - id: check-github-workflows
+-   repo: https://github.com/econchick/interrogate
+    rev: 1.5.0
+    hooks:
+      - id: interrogate
+        types: [python]
+        # exclude: ^(docs/conf.py|setup.py|tests/functional/sample)
+        args: [--config=pyproject.toml]
