--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -1,4 +1,4 @@
-name: Docs
+name: Site
 
 on:
   # Runs on pushes targeting the default branch
@@ -6,7 +6,7 @@ on:
     branches: ["main"]
   pull_request:
     paths:
-      - ".github/workflows/docs.yml"
+      - ".github/workflows/site.yml"
       - "site/**"
       - "**/*.schema.json"
       - "*.schema.json"
@@ -20,7 +20,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  docs:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -38,11 +38,11 @@ jobs:
         with:
           path: _build
 
-  pages:
+  deploy:
 
     runs-on: ubuntu-latest
     if: github.event_name != 'pull_request' && github.ref == 'refs/heads/main'
-    needs: [docs]
+    needs: [build]
 
     # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
     permissions:
