Add (explore) link to json-schema.app

--- a/site/config.toml
+++ b/site/config.toml
@@ -1,6 +1,7 @@
 title = "conda schemas"
 description = "Schemas for the conda ecosystem"
 site_name = "schemas.conda.org"
+site_url = "https://schemas.conda.org"
 
 [[sections]]
 name = "General"
