--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -13,6 +13,11 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+  
+  # Regenerate site every Sunday
+  # https://crontab.guru/#36_3_*_*_0
+  schedule:
+    - cron: 36 3 * * 0
 
 # Allow one concurrent deployment
 concurrency:
