--- a/site/config.toml
+++ b/site/config.toml
@@ -7,11 +7,11 @@ site_url = "https://schemas.conda.org"
 name = "General"
 description = "Foundational schemas for the conda ecosystem"
 items = [
-  {schema = "channeldata-1.schema.json", draft = true},
-  {schema = "common-1.schema.json", draft = true},
-  {schema = "info-security-1.schema.json", draft = true},
-  {schema = "repodata-1.schema.json", draft = true},
-  {schema = "repodata-record-1.schema.json", draft = true},
+  {schema = "archive/channeldata-1.schema.json", draft = true},
+  {schema = "archive/common-1.schema.json", draft = true},
+  {schema = "archive/info-security-1.schema.json", draft = true},
+  {schema = "archive/repodata-1.schema.json", draft = true},
+  {schema = "archive/repodata-record-1.schema.json", draft = true},
 ]
 
 [[sections]]
