Add links to code repo and issues. (#70)
Co-authored-by: jaimergp <jaimergp@users.noreply.github.com>

--- a/site/config.toml
+++ b/site/config.toml
@@ -1,5 +1,12 @@
 title = "conda schemas"
-description = "Schemas for the conda ecosystem"
+description = """
+This site contains schemas for the conda ecosystem.
+
+## Links
+
+- [Repository](https://github.com/conda/schemas)
+- [Report Issues](https://github.com/conda/schemas/issues)
+"""
 site_name = "schemas.conda.org"
 site_url = "https://schemas.conda.org"
 
