--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -38,7 +38,7 @@ jobs:
         run: pip install .
 
       - name: Regenerate schemas
-        run: python conda_models.main
+        run: python -m conda_models.main
 
       - name: Error out if there were changes
         run: git diff --exit-code
