Add schema for publish attestation predicate
Signed-off-by: Facundo Tuesca <facundo.tuesca@trailofbits.com>

--- a/site/config.toml
+++ b/site/config.toml
@@ -19,6 +19,7 @@ items = [
   {schema = "info-security-1.schema.json", draft = true},
   {schema = "repodata-1.schema.json", draft = true},
   {schema = "repodata-record-1.schema.json", draft = true},
+  {schema = "attestations-publish-1.schema.json", draft = true},
 ]
 
 [[sections]]
