--- a/site/config.toml
+++ b/site/config.toml
@@ -35,6 +35,7 @@ name = "Menuinst"
 dirname = "menuinst"
 description = "Schemas for the [menuinst](https://github.com/conda/menuinst) package"
 items = [
+  {schema = "https://raw.githubusercontent.com/conda/menuinst/refs/heads/main/menuinst/data/menuinst-1-1-3.schema.json"},
   {schema = "https://raw.githubusercontent.com/conda/menuinst/refs/heads/main/menuinst/data/menuinst-1-1-2.schema.json"},
   {schema = "https://raw.githubusercontent.com/conda/menuinst/refs/heads/main/menuinst/data/menuinst-1-1-1.schema.json"},
   {schema = "https://raw.githubusercontent.com/conda/menuinst/refs/heads/main/menuinst/data/menuinst-1-1-0.schema.json"},
